fix single artist audio player overflow

--- a/themes/coop-radio/sass/templates/_single-artist.scss
+++ b/themes/coop-radio/sass/templates/_single-artist.scss
@@ -24,6 +24,11 @@
       margin-left: 800px;
     }
   }
+  
+  .audio-container {
+    max-width: 100vw;
+    overflow: hidden;
+  }
 
   .artist-hero {
     position: relative;
