--- a/themes/coop-radio/style.css
+++ b/themes/coop-radio/style.css
@@ -1395,6 +1395,10 @@ h3 {
     .single-artist .top-text-container {
       margin-left: 800px; } }
 
+.single-artist .audio-container {
+  max-width: 100vw;
+  overflow: hidden; }
+
 .single-artist .artist-hero {
   position: relative; }
   .single-artist .artist-hero .artist-name {
